# ASC-ODE

./: CMakeLists.txt  README.md
mass_spring/: CMakeLists.txt  bind_mass_spring.cc  mass_spring.cc  mass_spring.h  mass_spring.ipynb  mass_spring_playground.ipynb  test_mass_spring.py
src/: nonlinfunc.h  ode.h
tests/: test_alpha.cc  test_verlet.cc
